--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,8 +10,9 @@
   <view class="postList" wx:if="{{hasUserInfo}}">
       <mp-cells ext-class="post-cells">
         <block wx:for="{{post_list}}" wx:key="id">
-          <mp-cell>
+          <mp-cell catchtap='showPostDetail' data-id='{{item.id}}' data-index='{{index}}'>
             <view>{{item.title}}</view>
+            <image src='{{item.feature_image}}' class='img'/>
             <view slot="foot">{{item.excerpt}}</view>
           </mp-cell>
         </block>
