--- a/pages/archives/archive.wxss
+++ b/pages/archives/archive.wxss
@@ -1,9 +1,6 @@
 .container {
-  height: 100%;
-  display: flex;
+    color: #ED6C00;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+  justify-content: space-between; */
+}
