--- a/pages/tags/tag.wxss
+++ b/pages/tags/tag.wxss
@@ -1,9 +1,5 @@
 .container {
-  height: 100%;
-  display: flex;
+  color: #000000;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+}
