--- a/pages/archives/archive.wxml
+++ b/pages/archives/archive.wxml
@@ -4,7 +4,8 @@
       <mp-cells ext-class="archive-cells">
         <block wx:for="{{archive_list}}" wx:key="id">
           <mp-cell catchtap='showDetail' data-id='{{item.id}}' data-index='{{index}}'>
-            <view>{{item.title}}</view>
+            <view class="cell-title">{{item.title}}</view>
+            <view class="cell-line"></view>
           </mp-cell>
         </block>
       </mp-cells>
