--- a/pages/user/user.wxss
+++ b/pages/user/user.wxss
@@ -1,15 +1,34 @@
 .container {
   height: 100%;
-  display: flex;
+  display: block;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 200rpx 0;
+  /* padding: 200rpx 0; */
   box-sizing: border-box;
   color: #ED6C00;
+  margin: 0rpx;
+  padding: 0rpx;
 } 
 
+.cell-bg {
+  border-radius: 30;
+}
+
+.site-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.site-logo {
+  width: 50rpx;
+  height: 50rpx;
+  padding-left: 20prx;
+}
+
 .title {
+  padding-left: 20rpx;
   color: #ED6C00
 }
 
