--- a/pages/web/web.wxss
+++ b/pages/web/web.wxss
@@ -1,6 +1,9 @@
 /* pages/web.wxss */
 .page-section-gap{
   box-sizing: border-box;
+  background-image: url("https://images.unsplash.com/photo-1565236055644-8c5c24ee6c9c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80");
+  background-size:100% 100%;
+  background-repeat:no-repeat;
   margin: 0rpx;
   padding: 0rpx;
 }
