--- a/pages/web/web.wxml
+++ b/pages/web/web.wxml
@@ -1,6 +1,6 @@
 <!--pages/web.wxml-->
 <view class="page-section page-section-gap">
-  <web-view src="{{url}}"></web-view>
+  <web-view src="{{url}}" bindload="webViewLoaded"></web-view>
   <!-- <text> 个人账号不支持 webView</text>
   <text>{{url}}</text> -->
 </view>
