--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,6 +3,36 @@
   color: #ED6C00;
   margin: 0rpx;
   padding: 0rpx;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.top-loading {
+  padding:16px;
+  text-align:center;
+  background-color: red;
+}
+
+.userinfo {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.user-info-logo {
+  width: 100rpx;
+  height: 100rpx;
+  margin: 50rpx;
+}
+
+.user-info-button {
+  color:  #FFFF;
+  background-color:  #ED6C00;
 }
 
 .cell-list {
