--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -10,10 +10,10 @@
   align-items: center;
 }
 
-.top-loading {
+.weui-loading__wrp {
   padding:16px;
   text-align:center;
-  background-color: red;
+  background-color: lightgray;
 }
 
 .userinfo {
