--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,19 +1,22 @@
 /**index.wxss**/
+
 .container {
   color: #ED6C00;
+  background-color: rgb(252, 252, 245);
   margin: 0rpx;
   padding: 0rpx;
   display: flex;
-  flex: 1;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .weui-loading__wrp {
   padding:16px;
   text-align:center;
-  background-color: lightgray;
+  /* background-color: lightgray; */
 }
 
 .userinfo {
@@ -33,6 +36,24 @@
 .user-info-button {
   color:  #FFFF;
   background-color:  #ED6C00;
+}
+
+.recommend-swiper {
+  padding-top: 30rpx;
+  padding-left: 30rpx;
+  padding-right: 30rpx;
+  width: 90%;
+  height: 300rpx;
+}
+
+.swiper-i {
+  border-radius: 20rpx;
+}
+
+.slide-img {
+ background-color: #FFFF;
+ width: 100%;
+ height: 100%;
 }
 
 .cell-list {
