--- a/pages/comment/comment.wxss
+++ b/pages/comment/comment.wxss
@@ -81,7 +81,8 @@ Page {
 .cell-bottom-line {
   height: 3rpx;
   width: 100%;
-  background-color: lightblue;
+  box-shadow: inset 0 -1px 0 0 #f6f6f6;
+  /* background-color: lightblue; */
 }
 
 .cell-approve {
@@ -95,7 +96,7 @@ Page {
 
 .comment-u {
   color: #959595;
-  padding-left: 20rpx;
+  padding-left: 56rpx;
   font-size: 24rpx;
 }
 
@@ -105,7 +106,8 @@ Page {
   font-size: 24rpx;
 }
 
-.approved-img {
+.approved-icon {
   width: 32rpx;
   height: 32rpx;
+  margin-left: 16rpx;
 }
