--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,10 +1,15 @@
 <!--pages/detail.wxml-->
-<scroll-view class="container">
+<!-- <scroll-view class="container"> -->
   <mp-html lazy-load
         scroll-table
         selectable
         highlight
         markdown
+        set-title
+        emoji
+        latex
+        card
+        domain="{{domain}}"
         
         content="{{html}}" />
-</scroll-view>
+<!-- </scroll-view> -->
