--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -20,15 +20,76 @@
   margin-top: 200px;
 }
 
+.post-list-page {
+  background-color: ghostwhite;
+}
+
+.post {
+  min-height: 40px;
+  display: flex;
+  flex-direction: column;
+  padding: 8px;
+  border-radius: 8px;
+  background-color: white;
+  margin: 4px;
+}
+
+.header-view {
+  height: auto;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.post-info {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  margin-right: 3px;
+}
+
 .post-title {
   color:black;
   text-align: left;
+  font-size: 16px;
+  font-weight: bold;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* 2指超过两行就显示省略号，以此类推 */
+  -webkit-box-orient: vertical;
+  overflow:hidden;
 }
 
 .post-excerpt {
-  color: blanchedalmond;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; /* 2指超过两行就显示省略号，以此类推 */
+  -webkit-box-orient: vertical;
+  font-size: 14px;
+  color: #666;
+  overflow:hidden;
 }
 
-.container {
-  color: #ED6C00
+.cover {
+  width: 80px;
+  height: 80px;
+  min-width: 80px;
+  margin-right: 10px;
+  border-radius: 8px;
+}
+
+.time {
+  font-size: 12px;
+  color: #999;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+}
+
+.seperator {
+  height: 0px;
+  width: 100%;
+  background-color: #e6e6e6;
 }
