--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -76,9 +76,11 @@
   border-radius: 8px;
 }
 
-.time {
+.publishedTimeText {
   font-size: 12px;
   color: #999;
+  text-align: right;
+  padding: 4px;
 }
 
 .footer {
