--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -19,8 +19,8 @@
         </view>
       </view>
       <view class="footer">
+        <view class="reading_time_text">{{'阅读时长：' + item.reading_time + '分钟'}}</view>
         <view class="publishedTimeText">{{item.publishedTimeText + ' 发表'}}</view>
-        <view class="seperator" />
       </view>
     </view>
   </view>
