--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -83,15 +83,16 @@
   padding: 4px;
 }
 
+.reading_time_text {
+  font-size: 12px;
+  color: #999;
+  text-align: right;
+  padding: 4px;
+}
+
 .footer {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: auto;
-}
-
-.seperator {
-  height: 0px;
-  width: 100%;
-  background-color: #e6e6e6;
 }
