--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -1,4 +1,5 @@
 <!--pages/user/user.wxml-->
 <view class='container'>
-  <text>用户页面</text>
+  <view class="header-view"></view>
+  <l-list class="list-item" wx:for="{{list_data}}" wx:key="index" key="{{item.id}}" title="{{item.title}}" desc="{{item.desc}}" icon="{{item.icon}}" />
 </view>
