--- a/pages/user/user.wxss
+++ b/pages/user/user.wxss
@@ -1,9 +1,16 @@
 .container {
   height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
 } 
+
+.header-view {
+  height: 200px;
+}
+
+.list-item {
+  margin-left: 20px;
+  margin-right: 10px;
+  color: aqua;
+}
